fix row overflow

--- a/css/style.css
+++ b/css/style.css
@@ -656,6 +656,8 @@ pre code {
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
+  padding-right: -15px;
+  padding-left: -15px;
 }
 
 .no-gutters {
@@ -9783,11 +9785,13 @@ a.text-dark:hover, a.text-dark:focus {
   font-size: 30px;
 }
 
-.wrapper{
+.rsvp-wrapper{
   z-index: 1;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
-.hidelogo{
+.rsvp-hidelogo{
   position: absolute;
   width: 100%;
   height: 200px;
